--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,9 +11,11 @@
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.17",
     "antd": "^5.12.2",
+    "axios": "^1.6.7",
+    "mobx": "^6.12.0",
+    "mobx-react": "^9.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.0",
     "react-router": "^6.22.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "^3.0.1",
